# poly_weather

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  weatheredge.db-shm
.claude/: settings.local.json
.omc/: project-memory.json
.omc/sessions/: 0c125140-c0e2-4dba-8196-bbde28949574.json  27128dcc-fcfc-4e0e-8310-b1e52d838549.json  5b9c27fe-8bc6-44f8-8930-04fbe8d2eb5d.json  6ce74638-383d-4535-8880-cf05d3e48f48.json  7efb7c2c-873b-42ee-9026-48041826abb5.json
.omc/state/: agent-replay-63125062-85f5-4bdd-bdda-cf9b66137cc1.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omx/: metrics.json
.omx/logs/: omx-2026-04-14.jsonl  omx-2026-04-15.jsonl  tmux-hook-2026-04-14.jsonl  tmux-hook-2026-04-15.jsonl  turns-2026-04-14.jsonl  turns-2026-04-15.jsonl
.omx/state/: session.json  subagent-tracking.json  tmux-hook-state.json
config/: logging.json  stations.yaml
docs/: README.md  architecture.md  data-model.md  design-principles.md  development-roadmap.md
docs/modules/: api-backend.md  backtest.md  dashboard.md  data-ingestion.md  execution-risk.md  market-ingestion.md  ops-config.md  (+1 more)
infra/: app.py  cdk.json  stack.py
src/: __init__.py
tests/: test_cleanup.py  test_contract_parser.py  test_ensemble_fetcher.py  test_market_fetcher.py  test_metar_parser.py  test_multi_city.py  test_probability.py  test_rounding.py  test_signal_generator.py  test_taf_parser.py  test_trend_adjustment.py  test_weather_api.py  test_weather_fetcher.py  test_worker_main.py
(+62 files in other folders)
