[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatheredge"
version = "0.1.0"
description = "Polymarket weather arbitrage research and trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "sqlmodel>=0.0.22,<0.1",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
